--- a/src/hfy/package.json
+++ b/src/hfy/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "prod": "webpack --config webpack.production.js -p",
-    "dev": "webpack"
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
