--- a/src/hfy/package.json
+++ b/src/hfy/package.json
@@ -13,7 +13,8 @@
     "babel-preset-es2015": "^6.22.0",
     "eslint": "^3.15.0",
     "uglify-js": "^2.7.5",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
